--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
+    "prettier": "^3.0.0",
     "typescript": "^5.1.6"
   },
   "name": "user-service",
@@ -28,6 +34,7 @@
     "arraybuffer.prototype.slice": "^1.0.1",
     "available-typed-arrays": "^1.0.5",
     "balanced-match": "^1.0.2",
+    "body-parser": "^1.20.2",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
     "builtins": "^5.0.1",
@@ -43,6 +50,7 @@
     "define-properties": "^1.2.0",
     "dir-glob": "^3.0.1",
     "doctrine": "^3.0.0",
+    "dotenv": "^16.3.1",
     "es-abstract": "^1.22.1",
     "es-set-tostringtag": "^2.0.1",
     "es-shim-unscopables": "^1.0.0",
@@ -59,6 +67,7 @@
     "esrecurse": "^4.3.0",
     "estraverse": "^5.3.0",
     "esutils": "^2.0.3",
+    "express": "^4.18.2",
     "fast-deep-equal": "^3.1.3",
     "fast-glob": "^3.3.1",
     "fast-json-stable-stringify": "^2.1.0",
@@ -96,6 +105,7 @@
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
     "internal-slot": "^1.0.5",
+    "ioredis": "^5.3.2",
     "is-array-buffer": "^3.0.2",
     "is-bigint": "^1.0.4",
     "is-boolean-object": "^1.1.2",
@@ -116,10 +126,13 @@
     "is-weakref": "^1.0.2",
     "isarray": "^2.0.5",
     "isexe": "^2.0.0",
+    "joi": "^17.9.2",
     "js-yaml": "^4.1.0",
     "json-schema-traverse": "^0.4.1",
     "json-stable-stringify-without-jsonify": "^1.0.1",
     "json5": "^1.0.2",
+    "jsonwebtoken": "^9.0.1",
+    "knex": "^2.5.1",
     "levn": "^0.4.1",
     "locate-path": "^6.0.0",
     "lodash.merge": "^4.6.2",
@@ -129,6 +142,7 @@
     "minimatch": "^3.1.2",
     "minimist": "^1.2.8",
     "ms": "^2.1.2",
+    "mysql2": "^3.5.2",
     "natural-compare": "^1.4.0",
     "natural-compare-lite": "^1.4.0",
     "object-inspect": "^1.12.3",
@@ -140,6 +154,7 @@
     "p-limit": "^3.1.0",
     "p-locate": "^5.0.0",
     "parent-module": "^1.0.1",
+    "passport": "^0.6.0",
     "path-exists": "^4.0.0",
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
@@ -162,6 +177,7 @@
     "shebang-regex": "^3.0.0",
     "side-channel": "^1.0.4",
     "slash": "^3.0.0",
+    "socket.io": "^4.7.1",
     "string.prototype.trim": "^1.2.7",
     "string.prototype.trimend": "^1.0.6",
     "string.prototype.trimstart": "^1.0.6",
@@ -191,7 +207,8 @@
     "yocto-queue": "^0.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .ts --fix"
   },
   "author": "Vladyslav Shevyrov",
   "license": "ISC"
