--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,15 @@
 version: "3.8"
 services:
-  app:
+  user-service:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - 8080:8080
     depends_on:
-      - db
-    command: sh -c ./migrations/scripts/migrations.sh
-  db:
+      - user-database
+    command: sh -c /app/migrations/scripts/migrations.sh
+  user-database:
     image: mysql:latest
     restart: always
     environment:
@@ -18,6 +18,13 @@ services:
       MYSQL_USER: admin
       MYSQL_PASSWORD: Qwerty123
     volumes:
-      - ./data:/var/lib/mysql
+      - ./mysql_data:/var/lib/mysql
     ports:
       - 3308:3306
+  user-redis:
+    image: redis:latest
+    container_name: user_redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis_data:/data
