--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "experimentalDecorators": true
   },
   "include": [
-    "src/**/*",
+    "src/**/*", "migrations/**/*"
   ],
   "exclude": [
     "node_modules",
