feat: Added auth middleware

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.4",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.45.0",
@@ -154,6 +156,7 @@
     "p-locate": "^5.0.0",
     "parent-module": "^1.0.1",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "path-exists": "^4.0.0",
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
